update fields
